Splitting up start into create/join/start
